--- a/Contact/app/src/main/res/values/strings.xml
+++ b/Contact/app/src/main/res/values/strings.xml
@@ -1,14 +1,11 @@
 <resources>
-    <string name="app_name">Книга контактов</string>
-    <string name="editName">Имя</string>
-    <string name="editEmail">Телефон</string>
+    <string name="app_name">Contacts</string>
     <string name="buttonAdd">Добавить</string>
-    <string name="buttonRead">Прочитать</string>
-    <string name="buttonClear">Очистить</string>
-    <string name="buttonUpdate">Изменить</string>
-    <string name="buttonDelete">Удалить</string>
-    <string name="textVersion"> </string>
-    <string name="textPhone">Телефон</string>
-    <string name="TextName">Имя</string>
-    <string name="textId">№</string>
+    <string name="editSurname">Фамилия</string>
+    <string name="editName">Имя</string>
+    <string name="editPatronimyc">Отчество</string>
+    <string name="editPhone">Телефон</string>
+    <string name="editEmail">E-mail</string>
+    <string name="buttonSave">Сохранить</string>
+    <string name="todo">TODO</string>
 </resources>
